# MyChat

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  docker-compose.yml  vcpkg.json
common/: CMakeLists.txt  config.json
common/database/: config.json  redis_mgr.cpp  redis_mgr.hpp
common/network/: IOService_pool.cpp  IOService_pool.hpp  packet_error_builder.cpp  packet_error_builder.hpp  protobuf_codec.cpp  protobuf_codec.hpp  tcp_server.cpp  tcp_server.hpp  tcp_session.cpp  tcp_session.hpp  websocket_server.cpp  websocket_server.hpp  websocket_session.cpp  websocket_session.hpp
common/proto/: base.pb.cc  base.pb.h  base.proto  codec_service.grpc.pb.cc  codec_service.pb.cc  codec_service.pb.h  codec_service.proto  command.pb.cc  command.pb.h  command.proto  friend.grpc.pb.cc  friend.grpc.pb.h  friend.pb.cc  friend.pb.h  friend.proto  group.grpc.pb.cc  group.grpc.pb.h  group.pb.cc  group.pb.h  group.proto  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  push.grpc.pb.cc  push.grpc.pb.h  push.pb.cc  push.pb.h  push.proto  user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h  user.proto
common/utils/: Singleton.hpp  cli_parser.hpp  config_mgr.hpp  connection_pool.hpp  coroutine_manager.cpp  coroutine_manager.hpp  example_usage.cpp  global.hpp  http_utils.hpp  log_manager.cpp  log_manager.hpp  memory_pool.hpp  service_identity.cpp  service_identity.hpp  service_identity_example.md  signal_handler.hpp  singleton.hpp  thread_pool.cpp  thread_pool.hpp  time_utils.hpp
demo/: CMakeLists.txt  redis_basic_demo.cpp
docs/: db.md  (+10 more)
gateway/: CMakeLists.txt  Gateway_Architecture_Documentation_demo.md  README.md  connection_flow_example.md  example_usage.cpp  fanout_policies.cpp  fanout_policies.hpp  friend_http_controller.cpp  friend_http_controller.hpp  group_http_controller.cpp  group_http_controller.hpp  group_message_http_controller.cpp  group_message_http_controller.hpp  main.cpp  main_example.cpp  message_authentication_strategy.md  message_http_controller.cpp  message_http_controller.hpp  message_ws_handler.cpp  message_ws_handler.hpp  push_service.cpp  push_service.hpp  security_policy.md  user_http_controller.cpp  user_http_controller.hpp  websocket_token_examples.md
gateway/auth/: CMakeLists.txt  aurh_mgr.hpp  auth_mgr.cpp  auth_mgr.hpp  config.json  example_usage.cpp  multi_platform_auth.cpp  multi_platform_auth.hpp
gateway/command_handlers/: command_handler_utils.cpp  command_handler_utils.hpp  friend_command_handlers.cpp  gateway_command_handler_modules.hpp  gateway_command_handler_registry.cpp  gateway_command_handler_registry.hpp  group_command_handlers.cpp  message_command_handlers.cpp  user_command_handlers.cpp
gateway/connection_manager/: conn_mgr.cpp  conn_mgr.hpp  connection_manager.cpp  connection_manager.hpp
gateway/demo/: CMakeLists.txt  README.md  build.sh  test_api.sh
gateway/gateway_server/: gateway_server-t1.cpp  gateway_server.cpp  gateway_server.hpp
gateway/http/: friend_client.cpp  friend_client.hpp  friend_http_controller.cpp  friend_http_controller.hpp  group_client.cpp  group_client.hpp  group_http_controller.cpp  group_http_controller.hpp  group_message_http_controller.cpp  group_message_http_controller.hpp  http_response_builder.hpp  http_types.hpp  httplib_adapter.hpp  message_client.cpp  message_client.hpp  message_http_controller.cpp  message_http_controller.hpp  remote_friend_client.cpp  remote_friend_client.hpp  remote_group_client.cpp  remote_group_client.hpp  remote_message_client.cpp  remote_message_client.hpp  remote_user_client.cpp  remote_user_client.hpp  user_client.cpp  user_client.hpp  user_http_controller.cpp  user_http_controller.hpp
gateway/message_processor/: README_coro_processor.md  async_design_guide.md  async_message_processor.hpp  coro_message_processor.cpp  coro_message_processor.hpp  coro_message_processor_example.cpp  coroutine_implementation_guide.md  coroutine_manager_design.md  message_parser.cpp  message_parser.hpp  message_processor.cpp  message_processor.hpp  processor.cpp  processor.hpp  unified_message.hpp
gateway/push/: gateway_push_delivery_service.cpp  gateway_push_delivery_service.hpp  push_service.cpp  push_service.hpp  remote_push_notifier.cpp  remote_push_notifier.hpp
gateway/router/: CHANGELOG.md  README.md  router.mgr.cpp  router_mgr.hpp  test_router_manager.cpp
gateway/service_adapters/: friend_service_adapter.hpp  group_service_adapter.hpp  message_service_adapter.hpp  remote_friend_service_adapter.cpp  remote_friend_service_adapter.hpp  remote_group_service_adapter.cpp  remote_group_service_adapter.hpp  remote_message_service_adapter.cpp  remote_message_service_adapter.hpp  remote_user_service_adapter.cpp  remote_user_service_adapter.hpp  user_service_adapter.hpp
gateway/ws/: message_ws_handler.cpp  message_ws_handler.hpp
services/: CMakeLists.txt
services/codec/: CMakeLists.txt  codec_grpc_server.cpp  codec_grpc_server.hpp  codec_service.grpc.pb.h  codec_service.pb.h  codec_service_impl.cpp  codec_service_impl.hpp  main.cpp
services/friend/: CMakeLists.txt  friend_grpc_service.cpp  friend_grpc_service.hpp  friend_packet_dispatcher.cpp  friend_packet_dispatcher.hpp  friend_repository.cpp  friend_repository.hpp  friend_server_app.cpp  friend_server_app.hpp  friend_server_main.cpp  friend_service.cpp  friend_service.hpp
services/gateway/: connection_manager.hpp  gateway_server.hpp  message_router.hpp
services/gateway-demo/: connection_manager_test.cpp  gateway_server.cpp  service_communicator.hpp
services/group/: CMakeLists.txt  group_grpc_service.cpp  group_grpc_service.hpp  group_message_repository.cpp  group_message_repository.hpp  group_message_service.cpp  group_message_service.hpp  group_packet_dispatcher.cpp  group_packet_dispatcher.hpp  group_repository.cpp  group_repository.hpp  group_server_app.cpp  group_server_app.hpp  group_server_main.cpp  (+2 more)
test/: CMakeLists.txt
tests/: CMakeLists.txt  minimal_gateway_test.cpp  mock_services.cpp  mock_services.hpp  run_integration_tests.sh  simple_test.cpp  test_gateway_server.cpp
(+744 files in other folders)
